# vfas_code_release

./: .gitignore
data_and_training/: README.md  installation.sh  requirements.txt  run_dataset_generator.py  test.py  train.py
data_and_training/config/: GraspEvaNet_Dataset_SR_Gripper.yaml  object_mesh_dict.yaml
data_and_training/data/: data_manager.py
data_and_training/models/: __init__.py  grasp_model.py  losses.py  networks.py
data_and_training/options/: base_options.py  test_options.py  train_options.py
data_and_training/resources/: 2f85_open.pt  2f85_open_grasp_frame.stl  SR_Gripper_Collision_Open.pt  SR_Gripper_Collision_Open.stl
data_and_training/scripts/: generate_grasp_evaluation_dataset.py  grasp_dataset_generator.py  pyrender_mininal_example.py  pyrender_rgbd_test.py  render_environment.py  sample_gripper_points.py  utils.py  visualize_acronym_grasps.py  visualize_env_frames.py  visualize_pcd_dataset.py  writer.py
data_and_training/tools/: generate_acronym_dataset.py  generate_bowl_dataset.py  select_object_category.py  select_object_mesh.py  utils.py
ros_pkgs/: README.md  requirements.txt
ros_pkgs/closed_loop_grasping/: package.xml  setup.cfg  setup.py
ros_pkgs/closed_loop_grasping/closed_loop_grasping/: closed_loop_grasper.py  grasp_selector.py  grasp_target_smoother.py  grasp_visualizer.py  mfield_subscriber.py  (+4 more)
ros_pkgs/motion_field/: package.xml  setup.cfg  setup.py
ros_pkgs/vfas_grasp_msgs/: CMakeLists.txt  package.xml
ros_pkgs/vfas_grasp_msgs/msg/: MotionField.msg  TargetMsg.msg
ros_pkgs/vfas_grasp_msgs/srv/: MFQuery.srv
(+20 files in other folders)
